--- a/librespeed/umbrel-app.yml
+++ b/librespeed/umbrel-app.yml
@@ -2,12 +2,32 @@ manifestVersion: 1
 id: librespeed
 category: networking
 name: LibreSpeed
-version: "5.2.5"
+version: "5.3.0"
 tagline: Free and open source speedtest
 description: >-
   Free and open source speedtest. Measure internet speeds between your devices and your Umbrel.
 releaseNotes: >-
-  Librespeed now runs on port 3011 to avoid a port conflict with the Samourai Server app. No other changes have been made to Librespeed.
+  This update takes LibreSpeed from v5.2.5 to v5.3.0.
+
+
+  Changes include:
+
+  - Improved docker file
+
+  - update php to 8.2
+
+  - ios favicon
+
+  - adopt new getIP API
+
+  - improve documentation
+
+  - change units from Mbps to Mbit/s (only naming, no changed values)
+
+  - move examples to folder
+  
+
+  Full release notes are found at: https://github.com/librespeed/speedtest/releases/tag/5.3.0
 developer: LibreSpeed
 website: https://librespeed.org/
 dependencies: []
