--- a/metube/docker-compose.yml
+++ b/metube/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 8081
 
   metube:
-    image: ghcr.io/alexta69/metube:2023-11-16
+    image: ghcr.io/alexta69/metube:2023-11-16@sha256:566057b972b34b339e5ace77f44883852a4623b5961f84f24f33d337ab4a42ab
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data:/downloads
