--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -11,6 +11,9 @@ developer: Alex Shnitman
 dependencies: []
 repo: https://github.com/alexta69/metube
 port: 3700
+releaseNotes: ""
+support: https://github.com/alexta69/metube/issues
+website: https://github.com/alexta69/metube/pkgs/container/metube
 gallery:
   - 1.jpg
   - 2.jpg
