--- a/metube/docker-compose.yml
+++ b/metube/docker-compose.yml
@@ -10,4 +10,4 @@ services:
     image: ghcr.io/alexta69/metube:2023-11-16@sha256:566057b972b34b339e5ace77f44883852a4623b5961f84f24f33d337ab4a42ab
     restart: on-failure
     volumes:
-      - ${UMBREL_ROOT}/data/storage/downloads:/downloads
+      - ${UMBREL_ROOT}/data/storage/downloads/metube:/downloads
