--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: bitcoin
 name: Lightning Terminal
-version: "0.12.1-alpha"
+version: "0.12.2-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -57,9 +57,7 @@ defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
   This release of Lightning Terminal (LiT) includes updates to the versions
-  of the integrated LND, Loop and Taproot Assets daemons. This release also
-  updates the documentation for RPC commands to be more coherent, as well as
-  various minor bug fixes.
+  of the integrated LND, Loop and Taproot Assets daemons.
 
 
   IMPORTANT NOTE: To avoid loss of funds, it's imperative that you read the
@@ -88,7 +86,7 @@ releaseNotes: >-
   feedback from the community.
 
 
-  This release packages LND v0.17.1-beta, Taproot Assets Daemon v0.3.1-alpha,
-  Loop v0.26.5-beta, Pool v0.6.4-beta and Faraday v0.2.11-alpha.
+  This release packages LND v0.17.3-beta, Taproot Assets Daemon v0.3.2-alpha,
+  Loop v0.26.6-beta, Pool v0.6.4-beta and Faraday v0.2.11-alpha.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
