--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: nextcloud
 category: files
 name: Nextcloud
-version: "28.0.1"
+version: "28.0.2"
 tagline: Productivity platform that keeps you in control
 description: >-
   Nextcloud puts your data at your fingertips, under your control.
@@ -25,8 +25,19 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  This patch update takes Nextcloud from version 28.0.0 to 28.0.1 and includes many fixes.
+  This patch update takes Nextcloud from version 28.0.1 to 28.0.2 and includes the following changes/fixes:
 
+
+  - Replace input field with password field and added password error message
+
+  - Refactor UI for session and app token management
+
+  - Backport unified search improvements / Rename “global search” to “unified search”
+
+  - Add OpenAPI scopes
+
+  - and many more...
+  
 
   Full release details for all Nextcloud versions can be found at https://nextcloud.com/changelog/
 developer: Nextcloud GmbH
