--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: node-red-standalone
 category: automation
 name: "Node-RED"
-version: "3.1.1"
+version: "3.1.3"
 tagline: Wire together the Internet of Things
 description: >-
   Node-RED is a visual programming tool for wiring together hardware
@@ -12,24 +12,13 @@ description: >-
   It provides a browser-based editor that makes it easy to wire together flows using the wide range of nodes in the palette that can be deployed to its runtime in a single-click. A built-in library allows you to save useful functions, templates or flows for re-use.
 
 
-  The flows created in Node-RED are stored using JSON which can be easily imported and exported for sharing with others. An online flow library allows you to share your best flows with the world.
-
-  
-  Note: If you would like your 'HTTP In' nodes to be accessible without authentication, then prepend your url with '/public/'. E.g. /public/do-something
+  The flows created in Node-RED are stored using JSON which can be easily imported and exported for sharing with others. An online flow library allows you to share your best flows with the world. 
 releaseNotes: >-
-  This update takes Node-RED from 3.0.2 to 3.1.1.
+  🔔 Node-RED on umbrel now runs in host network mode...
 
-  Whats changed:
 
-  - Default filter to All Catalogues and show nodes for small lists 
+  This a minor maintenance update for Node-RED.
 
-  - Ensure junction appears when filtering quick-add list
-
-  - Update message catalogs for JSONata Expression editor 
-
-  - Add tooltip to relevance sort button in user settings UI
-
-  - add more..
 
   Full release notes here: https://github.com/node-red/node-red/releases/tag/3.1.0
 developer: OpenJS Foundation
