--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -14,12 +14,7 @@ description: >-
 
   The flows created in Node-RED are stored using JSON which can be easily imported and exported for sharing with others. An online flow library allows you to share your best flows with the world. 
 releaseNotes: >-
-  🔔 Node-RED on umbrel now runs in host network mode...
-
-
-  This a minor maintenance update for Node-RED.
-
-
+  🔔 Node-RED on Umbrel can now automatically find devices on your local network, thanks to a switch to host network mode.
   Full release notes here: https://github.com/node-red/node-red/releases/tag/3.1.0
 developer: OpenJS Foundation
 website: https://nodered.org
