--- a/esphome/umbrel-app.yml
+++ b/esphome/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: esphome
 category: automation
 name: ESPHome
-version: "2023.11.6"
+version: "2023.12.9"
 tagline: Intelligently manage all your ESP8266/ESP32 devices
 description: >-
   ESPHome is a system to control your ESP8266/ESP32 by simple yet powerful configuration files and control them remotely through Home Automation systems.
@@ -21,16 +21,14 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
+  🔔 ESPHome on Umbrel can now automatically find devices on your local network, thanks to a switch to host network mode.
+
+
   ⚠️ As usual, please check that your configurations are still working correctly after updating.
 
   
-  This release updates ESPHome from version 2023.2.4 to 2023.11.6. A full list of new features, new component support, breaking changes, and bug fixes for versions 
-  between 2023.2.4 and 2023.11.6 can be found here: https://github.com/esphome/esphome/releases.
-
-
-  Version 2023.11.6 release notes:
-
-  - Fix write_speaker without speaker in config
+  This release updates ESPHome from version 2023.11.6.4 to 2023.12.9. A full list of new features, new component support, breaking changes, and bug fixes for versions 
+  between 2023.11.6.4 to 2023.12.9 can be found here: https://github.com/esphome/esphome/releases.
   
 submitter: ShonP40
 submission: https://github.com/getumbrel/umbrel-apps/pull/43
