--- a/back-that-mac-up/umbrel-app.yml
+++ b/back-that-mac-up/umbrel-app.yml
@@ -20,7 +20,7 @@ releaseNotes: >-
   🎉 New widgets are here for umbrelOS 1.0.
 
 
-  This update brings a new widgets for Back That Mac Up, allowing you to see your Time Machine usage at a glance right from your Umbrel's home screen.
+  This update brings a new widget for Back That Mac Up, allowing you to see your Time Machine usage at a glance right from your Umbrel's home screen.
 
 
   With umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
