finalize release notes

--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -42,7 +42,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  🎉 New widgets are here for umbrelOS 1.0.
+  🎉 Widgets are here for umbrelOS 1.0.
 
 
   This update brings two new widgets for the Bitcoin Node app, allowing you to keep an eye on your node's stats and its sync progress right from your Umbrel's home screen:
@@ -54,7 +54,7 @@ releaseNotes: >-
   - Sync Progress: A widget that shows your node's synchronization progress.
 
 
-  With umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
+  After updating to umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
 widgets:
   - id: "stats"
     type: "four-stats"
