--- a/transmission/umbrel-app.yml
+++ b/transmission/umbrel-app.yml
@@ -33,7 +33,7 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  🎉 New widgets are here for umbrelOS 1.0.
+  🎉 Widgets are here for umbrelOS 1.0.
 
 
   This update brings two new widgets for Transmission, allowing you to monitor the status of your torrents right from your Umbrel's home screen:
@@ -45,7 +45,7 @@ releaseNotes: >-
   - Active Torrents Monitor: A widget that shows your active torrents and their download and upload speeds.
 
 
-  With umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
+  After updating to umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
 
 
   This release also updates Transmission to version 4.0.5. Full release notes are available at https://github.com/transmission/transmission/releases
