--- a/back-that-mac-up/umbrel-app.yml
+++ b/back-that-mac-up/umbrel-app.yml
@@ -17,13 +17,13 @@ description: >
 
   For seamless backups even when your Mac isn't connected to the same network as your Umbrel, simply install Tailscale on your Umbrel and your Mac, and use smb://umbrel as the server address.
 releaseNotes: >-
-  🎉 New widgets are here for umbrelOS 1.0.
+  🎉 Widgets are here for umbrelOS 1.0.
 
 
   This update brings a new widget for Back That Mac Up, allowing you to see your Time Machine usage at a glance right from your Umbrel's home screen.
 
 
-  With umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
+  After updating to umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
 developer: Umbrel
 website: https://umbrel.com
 dependencies: []
