--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: bitcoin
 category: bitcoin
 name: Bitcoin Node
-version: "26.0"
+version: "26.0-w"
 tagline: Run your personal node powered by Bitcoin Core
 description: >-
   Run your Bitcoin node and independently store and validate
@@ -42,19 +42,19 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  What's new in Bitcoin Core version 26.0?
+  🎉 Widgets are here for umbrelOS 1.0.
 
 
-  - P2P and network changes
-
-  - Pruning changes: Improved handling of prune budget when using assumeutxo with -prune.
-
-  - New and updated RPCs
-  
-  - and more!
+  This update brings two new widgets for the Bitcoin Node app, allowing you to keep an eye on your node's stats and its sync progress right from your Umbrel's home screen:
 
 
-  Read the full release notes for additional information and detailed changes at https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-26.0.md
+  - Node Stats: A widget that displays the number of peer connections, mempool size, hashrate, and blockchain size of your node.
+
+
+  - Sync Progress: A widget that shows your node's synchronization progress.
+
+
+  After updating to umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
 widgets:
   - id: "stats"
     type: "four-stats"
