--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: bitcoin
 name: Lightning Node
-version: "v0.17.4-beta"
+version: "v0.17.4-beta-w"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,22 +22,22 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND from version 0.17.3-beta to 0.17.4-beta. 
+  🎉 Widgets are here for umbrelOS 1.0.
 
 
-  This is a hot fix release that fixes multiple bugs: Channel open hanging until restart, a memory leak when using polling mode for bitcoind, sync getting lost for pruned nodes and the REST proxy not working when TLS certificate encryption is turned on.
+  This update brings three new widgets for the Lightning Node app, allowing you to keep an eye on your node's stats, Bitcoin balance, and Lightning balance right from your Umbrel's home screen:
 
 
-  Full release notes are found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/
+  - Node Stats: A widget that displays the number of peer connections, number of active channels, max send, and max receive for your node.
 
 
-  🔔 In case you missed it, a previous release of the Lightning Node app (v0.17.0-beta) brought the option to run your node in hybrid mode or Tor-only mode, along with the ability to open private channels, receive keysend payments, bugfixes, and more!
+  - Bitcoin Wallet: A widget that shows the balance of your Bitcoin wallet and has shortcuts to send and receive Bitcoin in the Lightning Node app.
 
 
-  - Hybrid mode allows your node to make connections to peers (other nodes) over both Tor and clearnet, enhancing both latency and connection stability. This is enabled by default for new users, while existing users can activate it in Advanced Settings.
-  
+  - Lightning Wallet: A widget that shows the balance of your Lightning wallet and has shortcuts to send and receive Lightning payments in the Lightning Node app.
 
-  - You can now now choose to open private channels, which offer increased privacy but limited routing capabilities compared to public channels.
+
+  After updating to umbrelOS 1.0, you can add widgets by right-clicking on the home screen and selecting "Edit widgets", or by clicking on Widgets in the Dock.
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
