--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 1984
 
   web:
-    image: ghcr.io/impa10r/peerswap-web:v1.1.7@sha256:sha256:6cf947ca1e26d361b06210bb6b48a9f2e6533d1fa369371ac6ef14f299e702fe
+    image: ghcr.io/impa10r/peerswap-web:v1.1.7@sha256:6cf947ca1e26d361b06210bb6b48a9f2e6533d1fa369371ac6ef14f299e702fe
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
