--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -24,6 +24,11 @@ services:
       ELEMENTS_WALLET: peerswap
       ELEMENTS_FOLDER: /home/elements/.elements
       ELEMENTS_FOLDER_MAPPED: /home/peerswap/.elements
+      # Bitcoin RPC
+      BITCOIN_HOST: "${APP_BITCOIN_NODE_IP}"
+      BITCOIN_RPC_PORT: "${APP_BITCOIN_RPC_PORT}"
+      BITCOIN_RPC_USER: "${APP_BITCOIN_RPC_USER}"
+      BITCOIN_RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"  
     volumes:
       - ${APP_DATA_DIR}/data:/home/peerswap/.peerswap
       - ${APP_LIGHTNING_NODE_DATA_DIR}:/home/peerswap/.lnd:ro
