--- a/bitcoin-knots/docker-compose.yml
+++ b/bitcoin-knots/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_BITCOIN_IP
+      APP_HOST: $APP_BITCOIN_KNOTS_IP
       APP_PORT: 3005
   
   server:
@@ -15,43 +15,44 @@ services:
       - ${APP_BITCOIN_DATA_DIR}:/bitcoin/.bitcoin # volume to persist umbrel-bitcoin.conf and bitcoin.conf
     environment:
       PORT: "3005"
-      BITCOIN_HOST: "${APP_BITCOIN_NODE_IP}"
-      RPC_PORT: "${APP_BITCOIN_INTERNAL_RPC_PORT}"
-      BITCOIN_RPC_PORT: "${APP_BITCOIN_INTERNAL_RPC_PORT}"
-      RPC_USER: "${APP_BITCOIN_RPC_USER}"
-      BITCOIN_RPC_USER: "${APP_BITCOIN_RPC_USER}"
-      RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
-      BITCOIN_RPC_PASSWORD: "${APP_BITCOIN_RPC_PASS}"
-      BITCOIN_RPC_HIDDEN_SERVICE: "${APP_BITCOIN_RPC_HIDDEN_SERVICE}"
-      BITCOIN_P2P_HIDDEN_SERVICE: "${APP_BITCOIN_P2P_HIDDEN_SERVICE}"
-      BITCOIN_P2P_PORT: "${APP_BITCOIN_P2P_PORT}"
+      BITCOIN_HOST: "${APP_BITCOIN_KNOTS_NODE_IP}"
+      RPC_PORT: "${APP_BITCOIN_KNOTS_INTERNAL_RPC_PORT}"
+      BITCOIN_RPC_PORT: "${APP_BITCOIN_KNOTS_INTERNAL_RPC_PORT}"
+      RPC_USER: "${APP_BITCOIN_KNOTS_RPC_USER}"
+      BITCOIN_RPC_USER: "${APP_BITCOIN_KNOTS_RPC_USER}"
+      RPC_PASSWORD: "${APP_BITCOIN_KNOTS_RPC_PASS}"
+      BITCOIN_RPC_PASSWORD: "${APP_BITCOIN_KNOTS_RPC_PASS}"
+      BITCOIN_RPC_HIDDEN_SERVICE: "${APP_BITCOIN_KNOTS_RPC_HIDDEN_SERVICE}"
+      BITCOIN_P2P_HIDDEN_SERVICE: "${APP_BITCOIN_KNOTS_P2P_HIDDEN_SERVICE}"
+      BITCOIN_P2P_PORT: "${APP_BITCOIN_KNOTS_P2P_PORT}"
       DEVICE_DOMAIN_NAME: "${DEVICE_DOMAIN_NAME}"
-      BITCOIN_DEFAULT_NETWORK: "${BITCOIN_DEFAULT_NETWORK:-mainnet}"
+      BITCOIN_DEFAULT_NETWORK: "${BITCOIN_KNOTS_DEFAULT_NETWORK:-mainnet}"
+      # not needed
       BITCOIN_INITIALIZE_WITH_CLEARNET_OVER_TOR: "${BITCOIN_INITIALIZE_WITH_CLEARNET_OVER_TOR:-unset}"
-      BITCOIND_IP: "${APP_BITCOIN_NODE_IP}"
-      TOR_PROXY_IP: "${APP_BITCOIN_TOR_PROXY_IP}"
+      BITCOIND_IP: "${APP_BITCOIN_KNOTS_NODE_IP}"
+      TOR_PROXY_IP: "${APP_BITCOIN_KNOTS_TOR_PROXY_IP}"
       TOR_PROXY_PORT: "9050"
       TOR_PROXY_CONTROL_PORT: "9051"
       TOR_PROXY_CONTROL_PASSWORD: "moneyprintergobrrr"
-      I2P_DAEMON_IP: "${APP_BITCOIN_I2P_DAEMON_IP}"
+      I2P_DAEMON_IP: "${APP_BITCOIN_KNOTS_I2P_DAEMON_IP}"
       I2P_DAEMON_PORT: "7656"
     networks:
       default:
-        ipv4_address: $APP_BITCOIN_IP
+        ipv4_address: $APP_BITCOIN_KNOTS_IP
 
   bitcoind:
     image: retropexx/bitcoind:v25.1@sha256:4091eb570744d24f4234a0efc6d8b6aaf7de1c86d1a6e3077525d59bbd98336e
-    command: "${APP_BITCOIN_COMMAND}"
+    command: "${APP_BITCOIN_KNOTS_COMMAND}"
     restart: unless-stopped
     stop_grace_period: 15m30s
     volumes:
       - "${APP_BITCOIN_DATA_DIR}:/data/.bitcoin"
     ports:
-      - "${APP_BITCOIN_P2P_PORT}:${APP_BITCOIN_INTERNAL_P2P_PORT}"
-      - "${APP_BITCOIN_RPC_PORT}:${APP_BITCOIN_INTERNAL_RPC_PORT}"
+      - "${APP_BITCOIN_KNOTS_P2P_PORT}:${APP_BITCOIN_KNOTS_INTERNAL_P2P_PORT}"
+      - "${APP_BITCOIN_KNOTS_RPC_PORT}:${APP_BITCOIN_KNOTS_INTERNAL_RPC_PORT}"
     networks:
       default:
-        ipv4_address: $APP_BITCOIN_NODE_IP
+        ipv4_address: $APP_BITCOIN_KNOTS_NODE_IP
 
   tor:
     image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
@@ -64,7 +65,7 @@ services:
       HOME: "/tmp"
     networks:
       default:
-        ipv4_address: "${APP_BITCOIN_TOR_PROXY_IP}"
+        ipv4_address: "${APP_BITCOIN_KNOTS_TOR_PROXY_IP}"
   
   i2pd_daemon:
     image: purplei2p/i2pd:release-2.44.0@sha256:d154a599793c393cf9c91f8549ba7ece0bb40e5728e1813aa6dd4c210aa606f6
@@ -75,4 +76,4 @@ services:
       - ${APP_DATA_DIR}/data/i2pd:/home/i2pd/data
     networks:
       default:
-        ipv4_address: "${APP_BITCOIN_I2P_DAEMON_IP}"
+        ipv4_address: "${APP_BITCOIN_KNOTS_I2P_DAEMON_IP}"
