tweak release notes

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -33,20 +33,22 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-releaseNotes: >
-  This update brings BTCPay Server to version 1.13.1, and includes various bug fixes, and improvements.
+releaseNotes: >-
+  This update brings BTCPay Server to version 1.13.1, and includes various new features, bug fixes, and improvements.
 
-  - CSV exports from the Reports were exporting dates in 12-hour format instead of 24-hour format. (#5915, #5922) @TChukwuleta
 
-  - Crash when configuring BTCPay Server with a non-default Postgres schema (Fix #5901) @NicolasDorier
+  Highlights:
 
-  - A payment request with an amount of 0 no longer causes the payment request's page to crash (#5926) @Kukks
+  - It is now possible to customize your instance name and add a contact URL in Server Settings
+  
+  - There is a new Admin overview of the stores on the instance
+  
+  - Onboarding: Invite new users (#5714 #5719 #5874) @dennisreimann @dstrukt
+  
+  - A new option to add item list to keypad
+  
+  - Support for Better Bitcoin QRs (BBQr)
 
-  - Prevent unintentional double payouts (#5931, #5913) @dennisreimann
-
-  - The buyerEmail field in a Payment Request's form will now set the email for the payment request (#5926) @Kukks
-
-  - Added Tether as a supporter to the BTCPay Server Foundation (#5891) @rockstardev
 
   Full release notes can be found at https://github.com/btcpayserver/btcpayserver/releases.
 submitter: Umbrel
