tweak release notes

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This release updates LND to v0.17.5-beta. This is a minor hot fix release that bumps a dependency to ensure that lnd is compatible with Bitcoin Core 27.0.
+  This release updates LND to v0.17.5-beta. This is a minor hot fix release that bumps a dependency to ensure that LND is compatible with Bitcoin Core 27.0.
 
 
   Full LND v0.17.5-beta can be found at https://github.com/lightningnetwork/lnd/releases
