--- a/overseerr/umbrel-app.yml
+++ b/overseerr/umbrel-app.yml
@@ -16,6 +16,12 @@ description: >-
 
   During initial set-up, you will need to input your Umbrel device's IP address to connect to Plex (and optional services such as Radarr and Sonarr).
   You can find your device's IP address by visiting your router's admin dashboard or by using an IP scanning tool like Angry IP Scanner.
+releaseNotes: >-
+  Overseerr will now synchronize the media availability state with your Plex and Radarr/Sonnar instances.
+  This means if you delete items from your Plex and Radarr/Sonarr, Overseerr will now update the media status to reflect the change so it can be requested again.
+
+
+  Full release notes can be found at https://github.com/sct/overseerr/releases
 developer: Ryan Cohen
 website: https://overseerr.dev/
 dependencies: []
