--- a/localai/docker-compose.yml
+++ b/localai/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   app_proxy:
     environment:
       APP_HOST: localai_api_1
-      APP_PORT: 80
+      APP_PORT: 8080
+      PROXY_AUTH_WHITELIST: "/v1/*"
   api:
     image: localai/localai:v2.14.0-aio-cpu
     # For a specific version:
@@ -19,8 +20,6 @@ services:
       interval: 1m
       timeout: 20m
       retries: 5
-    ports:
-      - 8080:8080
     environment:
       - DEBUG=true
       # ...
