--- a/localai/umbrel-app.yml
+++ b/localai/umbrel-app.yml
@@ -1,29 +1,17 @@
 manifestVersion: 1
 id: localai
-category: files
+category: ai
 name: LocalAI
-version: "f769a766"
-tagline: Opensource Airdrop Alternative
+version: "v2.14.0"
+tagline: Drop-in OpenAI replacement
 description: >-
-  Snapdrop - local file sharing in your browser. Inspired by Apple's Airdrop.
-
-
-
-  Snapdrop is built with the following awesome technologies:
-  
-  - Vanilla HTML5 / ES6 / CSS3 frontend
-
-  - WebRTC / WebSockets
-
-  - NodeJS backend
-
-  - Progressive Web App (PWA)
-developer: RobinLinus
-website: https://snapdrop.net/
+  LocalAI is the free, Open Source OpenAI alternative. LocalAI act as a drop-in replacement REST API that’s compatible with OpenAI API specifications for local inferencing. It allows you to run LLMs, generate images, audio (and not only) locally or on-prem with consumer grade hardware, supporting multiple model families and architectures. Does not require GPU. 
+developer: Ettore Di Giacinto
+website: https://localai.io/
 dependencies: []
-repo: https://github.com/RobinLinus/snapdrop
-support: https://github.com/RobinLinus/snapdrop/blob/master/docs/faq.md
-port: 8222
+repo: https://github.com/mudler/LocalAI
+support: https://github.com/mudler/LocalAI/discussions
+port: 8793
 gallery:
   - 1.jpg
   - 2.jpg
@@ -31,5 +19,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: Pranshu Agrawal
-submission: https://github.com/getumbrel/umbrel-apps/pull/290
+submitter: highghlow
+submission: https://github.com/getumbrel/umbrel-apps/pull/TODO
