--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -4,14 +4,27 @@ name: Umami
 tagline: Umami is a simple, fast, privacy-focused alternative to Google Analytics
 category: developer
 version: "2.11.3"
-
-port: 3000
-
+port: 25727
 description: >-
-  This is the best app you have ever seen. It does everything you ever wanted and more.
+  Empowering insights. Preserving privacy.
 
 
-  It also supports new lines.
+  Umami makes it easy to collect, analyze, and understand your web data — while maintaining visitor privacy and data ownership.
+
+
+  😌 Easy to use
+  
+  Umami is easy to use and understand without needing to run complicated reports. All data is available at a glance.
+
+
+  💾 Own your data
+  
+  Data ownership is vitally important for maintinaing compliance with ever changing privacy laws. Rest assured knowing your data is in your control.
+
+
+  🔒 Respect data privacy
+
+  Umami lets you gather the data you need while respecting the privacy of your users. All data is anonymized and no personal data is ever collected. Cookie banners not required.
 
 # The developer of the app. This is not necessarily the submitter but the actual developer of the app.
 developer: John Doe
